more to testing

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -305,7 +305,7 @@ url = {http://dx.doi.org/10.1017/CBO9780511608865}
 @MISC{Marlow_haskell2010,
     author = {Simon Marlow},
     title = {Haskell 2010 Language Report},
-    year = {}
+    year = {2010}
 }
 
 @techreport{958,
