--- a/docs/glossary.tex
+++ b/docs/glossary.tex
@@ -26,7 +26,7 @@
 {%
     name={Duck Typing},
     description={a form of runtime typing where a object is tested for its suitability for a task,
-    rather than its exact nature.}
+    rather than its exact nature}
 }
 
 \newglossaryentry{DSL}
@@ -49,13 +49,20 @@
 
 \newglossaryentry{strict}
 {%
-    name={strictness},
+    name={Strictness},
     description={a language is strict if it always evaluates all of the parameters passed to a
-    function. A non-strict, or lazy, language, only evaluates what is specifically required.}
+    function. A non-strict, or lazy, language, only evaluates what is specifically required}
 }
 
 \newglossaryentry{DAG}
 {%
     name={DAG},
     description={a directed acyclic graph}
+}
+
+\newglossaryentry{totality}
+{%
+    name={Total function},
+    description={a function which has a legal output for every legal input, i.e.\ an output is
+    defined for all possible input}
 }
