change end? to empty?

--- a/docs/libs.tex
+++ b/docs/libs.tex
@@ -47,7 +47,7 @@ The standard libraries are arranged as follows:
     twice & $\forall a. (a \rightarrow a) \rightarrow a \rightarrow a$ \\
     pipe & $\forall a b. a \rightarrow a (a \rightarrow b) \rightarrow b$ \\
     compose & $\forall a b c. (a \rightarrow b) \rightarrow (c \rightarrow a) \rightarrow c \rightarrow b$\\
-    end? & $Number \rightarrow Boolean$ \\
+    empty? & $Number \rightarrow Boolean$ \\
     length & $\forall a. [a] \rightarrow Number$ \\
     drop & $\forall a. Number \rightarrow [a] \rightarrow [a]$ \\
     take & $\forall a. Number \rightarrow [a] \rightarrow [a]$ \\
